# LLMAgentbuilder

./: .cursorrules  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  HF_SPACES_TROUBLESHOOTING.md  HUGGINGFACE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PERFORMANCE_IMPROVEMENTS.md  QUICK_START.md  README.md  SECURITY.md  app.py  curl_test_agent_output_success.json  demo_multi_step_tools.py  gradio_app.py  implementation_plan.md  llm-agent-builder  main.py  output.txt  package-lock.json  pre-commit-check.sh  pyproject.toml  requirements.txt  server_log.txt  server_log_new.txt  setup.py  setup_hf_space.py  setup_multi_step_tools.py  task.md  test_agent_engine.py  test_engine.py  test_output_v5.txt  test_with_mock_key.sh  test_workflow.db-shm  test_workflow.db-wal  (+5 more)
.cursor/: mcp.json.template
.github/: copilot-instructions.md
config/: default.yaml  development.yaml  production.yaml  test.yaml
docs/: AGENT_ENGINE_USAGE.md  CONFIGURATION.md  DATABASE.md  GEMINI.md  GITHUB_MCP_SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTI_STEP_AND_TOOLS_GUIDE.md  NEXT_STEPS_COMPLETE.md  PR_COMPARISON.md  QUICK_START.md  SECURITY.md  SETUP_SUMMARY.md  old_task_tracking.md  walkthrough.md  walkthrough_hf_space_deployment.md
examples/: CLI_EXAMPLES.md  advanced_agent_example.py  huggingface_features_demo.py  multi_step_agent_example.py  tools_agent_example.py  tools_code_reviewer.json  tools_example.json  workflow_example.py  workflow_impl.py
frontend/: package-lock.json  package.json
generated_agents/: codereviewer.py  dataanalyst.py  demoagent.py  meanmom.py  newsbot.py  previewagent.py  testagent.py  wizard.py
llm_agent_builder/: __init__.py  __main__.py  agent_builder.py  agent_engine.py  cli.py  config.py  copilot_client.py  hf_content_safety.py  hf_mcp_integration.py  hf_space_deployment.py  huggingchat_client.py  huggingface_utils.py  image_generator.py  presets.py  server_runner.py  tool_library.py  utils.py
logs/: cli_test_output.txt  curl_test_agent_output.txt  server_log_new.txt
scripts/: pre-commit-check.sh  setup_github_mcp.sh  setup_hf_space.py  test_with_mock_key.sh
server/: main.py  models.py  run.py  sandbox.py
test_outputs/: curl_output.json  curl_output_remote_retry.json  mypy_cli.txt  test_output.txt  test_output_api.txt  test_output_api_2.txt  test_output_v2.txt  test_output_v3.txt  test_output_v4.txt  workflow.db
tests/: conftest.py  test_agent_builder.py  test_agent_engine.py  test_agent_engine_copilot.py  test_api.py  test_cli.py  test_config.py  test_config_loading.py  test_config_overrides.py  test_config_validation.py  test_database_concurrent.py  test_database_manager.py  test_database_pool.py  test_database_transactions.py  test_entry_points.py  test_hf_mcp.py  test_huggingchat.py  test_mock_cursor_api.py  test_mock_github_copilot_api.py  test_provider_implementations.py  (+4 more)
(+111 files in other folders)
