[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-agent-builder"
version = "1.0.0"
description = "A tool to scaffold and generate Anthropic-based LLM agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LLMAgentBuilder Team"}
]
keywords = ["llm", "agent", "anthropic", "claude", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.18.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "huggingface_hub>=0.19.0",
    "slowapi>=0.1.9",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
]

[project.scripts]
llm-agent-builder = "main:main"
llm-agent-builder-cli = "llm_agent_builder.cli:main"
llm-agent-builder-serve = "llm_agent_builder.server_runner:run_web_server"

[project.urls]
Homepage = "https://github.com/kwizzlesurp10-ctrl/LLMAgentbuilder"
Documentation = "https://github.com/kwizzlesurp10-ctrl/LLMAgentbuilder#readme"
Repository = "https://github.com/kwizzlesurp10-ctrl/LLMAgentbuilder"
Issues = "https://github.com/kwizzlesurp10-ctrl/LLMAgentbuilder/issues"

[tool.setuptools]
packages = ["llm_agent_builder", "server"]

[tool.setuptools.package-data]
llm_agent_builder = ["templates/*.j2"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["llm_agent_builder", "server"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

